Update and rename quiltkoil to quiltkoil.html

--- a/quiltkoil.html
+++ b/quiltkoil.html
@@ -206,9 +206,14 @@ new {
           <img src="forgekoilweblogo.png" alt="" style="width:280px;height:90px;">
 <h3><b>Mods:</h3></b>
 <hr>
+<h3><b>Mods:</h3></b>
+<hr>
 <h4>Mod Name</h4>
 <p>mod discription<p>
-<button><a class='btn' style='font-size:14px' href="index.html">Curseforge <i class='fas fa-download'></i></a></button></script><button><a class='btn' style='font-size:14px' href="index.html">Github <i class='fas fa-download'></i></a></button></script>
+<p>Images</p>
+<p><norm>Download:</norm><p>
+<a class='btn' style='font-size:14px' href="index.html">Curseforge <i class='fas fa-download'></i></a></script>
+<a class='btn' style='font-size:14px' href="index.html">Github <i class='fas fa-download'></i></a></script>
 <hr>
 <script>
 function noti() {
