--- a/quiltkoil.html
+++ b/quiltkoil.html
@@ -203,7 +203,7 @@ new {
     </div>
     <div class="col-sm-8 text-left"> 
     <h3></h3>
-          <img src="forgekoilweblogo.png" alt="" style="width:280px;height:90px;">
+          <img src="quiltkoilweblogo.png" alt="" style="width:280px;height:90px;">
 <h3><b>Mods:</h3></b>
 <hr>
 <h4>Mod Name</h4>
