--- a/quiltkoil.html
+++ b/quiltkoil.html
@@ -206,13 +206,64 @@ new {
           <img src="quiltkoilweblogo.png" alt="" style="width:280px;height:90px;">
 <h3><b>Mods:</h3></b>
 <hr>
-<h4>Mod Name</h4>
-<p>mod discription<p>
-<p>Images</p>
-<p><norm>Download:</norm><p>
-<a class='btn' style='font-size:14px' href="index.html">Curseforge <i class='fas fa-download'></i></a></script>
-<a class='btn' style='font-size:14px' href="index.html">Github <i class='fas fa-download'></i></a></script>
-<hr>
+<div class="panel-group" id="accordion">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+        Mod Name 1</a>
+      </h4>
+    </div>
+    <div id="collapse1" class="panel-collapse collapse in">
+      <div class="panel-body"><b><p>mod discription</p>
+      <h6><b><norm>Download</norm><b></h6>
+        <a class='btn' style='font-size:14px' href="indexd.html">Curseforge <i class='fas fa-download'></i></a></script></li>
+        <a class='btn' style='font-size:14px' href="index.html">Github <i class='fas fa-download'></i></a></script></li>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+        Mod Name 2</a>
+      </h4>
+    </div>
+    <div id="collapse2" class="panel-collapse collapse">
+       <div class="panel-body"><b><p>mod discription</p>
+      <h6><b><norm>Download</norm><b></h6>
+        <a class='btn' style='font-size:14px' href="indexd.html">Curseforge <i class='fas fa-download'></i></a></script></li>
+        <a class='btn' style='font-size:14px' href="index.html">Github <i class='fas fa-download'></i></a></script></li>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+        Mod Name 3</a>
+      </h4>
+    </div>
+    <div id="collapse3" class="panel-collapse collapse">
+       <div class="panel-body"><b><p>mod discription</p>
+      <h6><b><norm>Download</norm><b></h6>
+        <a class='btn' style='font-size:14px' href="indexd.html">Curseforge <i class='fas fa-download'></i></a></script></li>
+        <a class='btn' style='font-size:14px' href="index.html">Github <i class='fas fa-download'></i></a></script></li>
+    </div>
+  </div>
+   <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">
+        Mod Name 4</a>
+      </h4>
+    </div>
+    <div id="collapse4" class="panel-collapse collapse">
+       <div class="panel-body"><b><p>mod discription</p>
+      <h6><b><norm>Download</norm><b></h6>
+        <a class='btn' style='font-size:14px' href="indexd.html">Curseforge <i class='fas fa-download'></i></a></script></li>
+        <a class='btn' style='font-size:14px' href="index.html">Github <i class='fas fa-download'></i></a></script></li>
+    </div>
+  </div>
+</div>
 <script>
 function noti() {
   var x = document.getElementById("snackbar");
