--- a/quiltkoil.html
+++ b/quiltkoil.html
@@ -179,7 +179,7 @@ new {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <img src="quiltkoilweblogo.png" alt="" style="width:140px;height:45px;">
+      <img src="quilt.png" alt="" style="width:45px;height:45px;">
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -204,7 +204,8 @@ new {
     </div>
     <div class="col-sm-8 text-left"> 
     <h3></h3>
-          <img src="quiltkoilweblogo.png" alt="" style="width:280px;height:90px;">
+     <h3><b>about:</b></h3>
+      <p></p>
 <hr>
 <div class="panel-group" id="accordion">
   <div class="panel panel-default">
