--- a/quiltkoil.html
+++ b/quiltkoil.html
@@ -203,15 +203,15 @@ new {
     <div class="col-sm-2 sidenav">
     </div>
     <div class="col-sm-8 text-left"> 
-    <h3></h3>
-     <h3><b>about:</b></h3>
-      <p></p>
+    <h3><b><img src="quilt.png" alt="" style="width:40px;height:40px;">  Quiltkoil</b></h3>
+      <h4>about:</h4>
+      <p>text</p>
 <hr>
 <div class="panel-group" id="accordion">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1"><img src="koil.png" alt="" style="width:40px;height:40px;">  
         Mod Name 1</a>
       </h4>
     </div>
@@ -226,7 +226,7 @@ new {
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2"><img src="koil.png" alt="" style="width:40px;height:40px;">  
         Mod Name 2</a>
       </h4>
     </div>
@@ -241,7 +241,7 @@ new {
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse3"><img src="koil.png" alt="" style="width:40px;height:40px;">  
         Mod Name 3</a>
       </h4>
     </div>
@@ -256,7 +256,7 @@ new {
    <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse4"><img src="koil.png" alt="" style="width:40px;height:40px;">  
         Mod Name 4</a>
       </h4>
     </div>
