--- a/quiltkoil.html
+++ b/quiltkoil.html
@@ -3,7 +3,7 @@
 <head>
   <title>Quiltcoil - Koil Website</title>
   <meta charset="utf-8">
-  <meta name="description" img src="image.png" content="Chrome Features and Info [BETA]"> 
+  <meta name="description" img src="quilt.png" content="The Quilt Runner For Koil"> 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./style/style1.css">
   <link rel="shortcut icon" href="quilt.png">
