--- a/quiltkoil.html
+++ b/quiltkoil.html
@@ -211,7 +211,7 @@ new {
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1"><img src="koil.png" alt="" style="width:40px;height:40px;">  
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1"><img src="quilt.png" alt="" style="width:40px;height:40px;">  
         Mod Name 1</a>
       </h4>
     </div>
@@ -226,7 +226,7 @@ new {
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2"><img src="koil.png" alt="" style="width:40px;height:40px;">  
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2"><img src="quilt.png" alt="" style="width:40px;height:40px;">  
         Mod Name 2</a>
       </h4>
     </div>
@@ -241,7 +241,7 @@ new {
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse3"><img src="koil.png" alt="" style="width:40px;height:40px;">  
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse3"><img src="quilt.png" alt="" style="width:40px;height:40px;">  
         Mod Name 3</a>
       </h4>
     </div>
@@ -256,7 +256,7 @@ new {
    <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse4"><img src="koil.png" alt="" style="width:40px;height:40px;">  
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse4"><img src="quilt.png" alt="" style="width:40px;height:40px;">  
         Mod Name 4</a>
       </h4>
     </div>
