--- a/quiltkoil.html
+++ b/quiltkoil.html
@@ -204,9 +204,14 @@ new {
     </div>
     <div class="col-sm-8 text-left"> 
     <h3><b><img src="quilt.png" alt="" style="width:40px;height:40px;">  Quiltkoil</b></h3>
-      <h4>about:</h4>
-      <p>text</p>
-<hr>
+      <h6><b><norm>Description:</norm></b></h6>
+     <p>The Fabric runner for Koil.</p>
+     <h3></h3>
+      <h6><b><norm>Download</norm></b></h6>
+         <a class='btn' style='font-size:14px' href="indexdr.html">Direct Download  <i class='fas fa-download'></i></a></script></li>
+        <a class='btn' style='font-size:14px' href="indexd.html">Curseforge <i class='fas fa-download'></i></a></script></li>
+        <a class='btn' style='font-size:14px' href="index.html">Github <i class='fas fa-download'></i></a></script></li>
+        <hr>
 <div class="panel-group" id="accordion">
   <div class="panel panel-default">
     <div class="panel-heading">
