--- a/quiltkoil.html
+++ b/quiltkoil.html
@@ -204,6 +204,7 @@ new {
     </div>
     <div class="col-sm-8 text-left"> 
     <h3><b><img src="quilt.png" alt="" style="width:40px;height:40px;">  Quiltkoil</b></h3>
+            <h6><b>Version: Dev 1</b></h6>
      <h3></h3>
       <h6><b><norm>Download</norm></b></h6>
          <a class='btn' style='font-size:14px' href="indexdr.html">Direct Download  <i class='fas fa-download'></i></a></script></li>
