--- a/quiltkoil.html
+++ b/quiltkoil.html
@@ -207,7 +207,7 @@ new {
             <h6><b>Version: Dev 1</b></h6>
      <h3></h3>
       <h6><b><norm>Download</norm></b></h6>
-         <a class='btn' style='font-size:14px' href="indexdr.html">Direct Download  <i class='fas fa-download'></i></a></script></li>
+        <a class='btn' style='font-size:14px' href="filedownloadlink" download>Direct Download  <i class='fas fa-download'></i></a></script></li>
         <a class='btn' style='font-size:14px' href="indexd.html">Curseforge <i class='fas fa-download'></i></a></script></li>
         <a class='btn' style='font-size:14px' href="index.html">Github <i class='fas fa-download'></i></a></script></li>
         <hr>
@@ -222,7 +222,7 @@ new {
     <div id="collapse1" class="panel-collapse collapse in">
       <div class="panel-body"><b><p>mod discription</p>
       <h6><b><norm>Download:</norm><b></h6>
-        <a class='btn' style='font-size:14px' href="indexdr.html">Direct Download  <i class='fas fa-download'></i></a></script></li>
+        <a class='btn' style='font-size:14px' href="filedownloadlink" download>Direct Download  <i class='fas fa-download'></i></a></script></li>
         <a class='btn' style='font-size:14px' href="indexd.html">Curseforge <i class='fas fa-download'></i></a></script></li>
         <a class='btn' style='font-size:14px' href="index.html">Github <i class='fas fa-download'></i></a></script></li>
     </div>
@@ -237,7 +237,7 @@ new {
     <div id="collapse2" class="panel-collapse collapse">
        <div class="panel-body"><b><p>mod discription</p>
       <h6><b><norm>Download:</norm><b></h6>
-        <a class='btn' style='font-size:14px' href="indexdr.html">Direct Download  <i class='fas fa-download'></i></a></script></li>
+        <a class='btn' style='font-size:14px' href="filedownloadlink" download>Direct Download  <i class='fas fa-download'></i></a></script></li>
         <a class='btn' style='font-size:14px' href="indexd.html">Curseforge <i class='fas fa-download'></i></a></script></li>
         <a class='btn' style='font-size:14px' href="index.html">Github <i class='fas fa-download'></i></a></script></li>
     </div>
@@ -252,7 +252,7 @@ new {
     <div id="collapse3" class="panel-collapse collapse">
        <div class="panel-body"><b><p>mod discription</p>
       <h6><b><norm>Download:</norm><b></h6>
-        <a class='btn' style='font-size:14px' href="indexdr.html">Direct Download  <i class='fas fa-download'></i></a></script></li>
+        <a class='btn' style='font-size:14px' href="filedownloadlink" download>Direct Download  <i class='fas fa-download'></i></a></script></li>
         <a class='btn' style='font-size:14px' href="indexd.html">Curseforge <i class='fas fa-download'></i></a></script></li>
         <a class='btn' style='font-size:14px' href="index.html">Github <i class='fas fa-download'></i></a></script></li>
     </div>
@@ -267,7 +267,7 @@ new {
     <div id="collapse4" class="panel-collapse collapse">
        <div class="panel-body"><b><p>mod discription</p>
       <h6><b><norm>Download:</norm><b></h6>
-        <a class='btn' style='font-size:14px' href="indexdr.html">Direct Download  <i class='fas fa-download'></i></a></script></li>
+        <a class='btn' style='font-size:14px' href="filedownloadlink" download>Direct Download  <i class='fas fa-download'></i></a></script></li>
         <a class='btn' style='font-size:14px' href="indexd.html">Curseforge <i class='fas fa-download'></i></a></script></li>
         <a class='btn' style='font-size:14px' href="index.html">Github <i class='fas fa-download'></i></a></script></li>
     </div>
