--- a/quiltkoil.html
+++ b/quiltkoil.html
@@ -217,6 +217,7 @@ new {
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapse1"><img src="quilt.png" alt="" style="width:40px;height:40px;">  
         Mod Name 1</a>
+        <h6><b>Version: 0.0.0</b></h6>
       </h4>
     </div>
     <div id="collapse1" class="panel-collapse collapse in">
@@ -232,6 +233,7 @@ new {
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapse2"><img src="quilt.png" alt="" style="width:40px;height:40px;">  
         Mod Name 2</a>
+        <h6><b>Version: 0.0.0</b></h6>
       </h4>
     </div>
     <div id="collapse2" class="panel-collapse collapse">
@@ -247,6 +249,7 @@ new {
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapse3"><img src="quilt.png" alt="" style="width:40px;height:40px;">  
         Mod Name 3</a>
+        <h6><b>Version: 0.0.0</b></h6>
       </h4>
     </div>
     <div id="collapse3" class="panel-collapse collapse">
@@ -262,6 +265,7 @@ new {
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapse4"><img src="quilt.png" alt="" style="width:40px;height:40px;">  
         Mod Name 4</a>
+        <h6><b>Version: 0.0.0</b></h6>
       </h4>
     </div>
     <div id="collapse4" class="panel-collapse collapse">
