--- a/quiltkoil.html
+++ b/quiltkoil.html
@@ -208,7 +208,7 @@ new {
      <h3></h3>
       <h6><b><norm>Download</norm></b></h6>
         <a class='btn' style='font-size:14px' href="filedownloadlink" download>Direct Download  <i class='fas fa-download'></i></a></script></li>
-        <a class='btn' style='font-size:14px' href="indexd.html">Curseforge <i class='fas fa-download'></i></a></script></li>
+        <a class='btn' style='font-size:14px' href="https://curseforge.com/">Curseforge <i class='fas fa-download'></i></a></script></li>
         <hr>
 <div class="panel-group" id="accordion">
   <div class="panel panel-default">
@@ -223,7 +223,7 @@ new {
       <div class="panel-body"><b><p>mod discription</p>
       <h6><b><norm>Download:</norm><b></h6>
         <a class='btn' style='font-size:14px' href="filedownloadlink" download>Direct Download  <i class='fas fa-download'></i></a></script></li>
-        <a class='btn' style='font-size:14px' href="indexd.html">Curseforge <i class='fas fa-download'></i></a></script></li>
+        <a class='btn' style='font-size:14px' href="https://curseforge.com/">Curseforge <i class='fas fa-download'></i></a></script></li>
     </div>
   </div>
   <div class="panel panel-default">
@@ -238,7 +238,7 @@ new {
        <div class="panel-body"><b><p>mod discription</p>
       <h6><b><norm>Download:</norm><b></h6>
         <a class='btn' style='font-size:14px' href="filedownloadlink" download>Direct Download  <i class='fas fa-download'></i></a></script></li>
-        <a class='btn' style='font-size:14px' href="indexd.html">Curseforge <i class='fas fa-download'></i></a></script></li>
+        <a class='btn' style='font-size:14px' href="https://curseforge.com/">Curseforge <i class='fas fa-download'></i></a></script></li>
     </div>
   </div>
   <div class="panel panel-default">
@@ -253,7 +253,7 @@ new {
        <div class="panel-body"><b><p>mod discription</p>
       <h6><b><norm>Download:</norm><b></h6>
         <a class='btn' style='font-size:14px' href="filedownloadlink" download>Direct Download  <i class='fas fa-download'></i></a></script></li>
-        <a class='btn' style='font-size:14px' href="indexd.html">Curseforge <i class='fas fa-download'></i></a></script></li>
+        <a class='btn' style='font-size:14px' href="https://curseforge.com/">Curseforge <i class='fas fa-download'></i></a></script></li>
     </div>
   </div>
    <div class="panel panel-default">
@@ -268,7 +268,7 @@ new {
        <div class="panel-body"><b><p>mod discription</p>
       <h6><b><norm>Download:</norm><b></h6>
         <a class='btn' style='font-size:14px' href="filedownloadlink" download>Direct Download  <i class='fas fa-download'></i></a></script></li>
-        <a class='btn' style='font-size:14px' href="indexd.html">Curseforge <i class='fas fa-download'></i></a></script></li>
+        <a class='btn' style='font-size:14px' href="https://curseforge.com/">Curseforge <i class='fas fa-download'></i></a></script></li>
     </div>
   </div>
 </div>
