--- a/quiltkoil.html
+++ b/quiltkoil.html
@@ -209,6 +209,8 @@ new {
       <h6><b><norm>Download</norm></b></h6>
         <a class='btn' style='font-size:14px' href="filedownloadlink" download>Direct Download  <i class='fas fa-download'></i></a></script></li>
         <a class='btn' style='font-size:14px' href="https://curseforge.com/">Curseforge <i class='fas fa-download'></i></a></script></li>
+        <a class='btn' style='font-size:14px' href="https://modrinth.com/">Modrinth <i class='fas fa-download'></i></a></script></li>
+
         <hr>
 <div class="panel-group" id="accordion">
   <div class="panel panel-default">
@@ -224,6 +226,8 @@ new {
       <h6><b><norm>Download:</norm><b></h6>
         <a class='btn' style='font-size:14px' href="filedownloadlink" download>Direct Download  <i class='fas fa-download'></i></a></script></li>
         <a class='btn' style='font-size:14px' href="https://curseforge.com/">Curseforge <i class='fas fa-download'></i></a></script></li>
+              <a class='btn' style='font-size:14px' href="https://modrinth.com/">Modrinth <i class='fas fa-download'></i></a></script></li>
+
     </div>
   </div>
   <div class="panel panel-default">
@@ -239,6 +243,8 @@ new {
       <h6><b><norm>Download:</norm><b></h6>
         <a class='btn' style='font-size:14px' href="filedownloadlink" download>Direct Download  <i class='fas fa-download'></i></a></script></li>
         <a class='btn' style='font-size:14px' href="https://curseforge.com/">Curseforge <i class='fas fa-download'></i></a></script></li>
+              <a class='btn' style='font-size:14px' href="https://modrinth.com/">Modrinth <i class='fas fa-download'></i></a></script></li>
+
     </div>
   </div>
   <div class="panel panel-default">
@@ -254,6 +260,8 @@ new {
       <h6><b><norm>Download:</norm><b></h6>
         <a class='btn' style='font-size:14px' href="filedownloadlink" download>Direct Download  <i class='fas fa-download'></i></a></script></li>
         <a class='btn' style='font-size:14px' href="https://curseforge.com/">Curseforge <i class='fas fa-download'></i></a></script></li>
+              <a class='btn' style='font-size:14px' href="https://modrinth.com/">Modrinth <i class='fas fa-download'></i></a></script></li>
+
     </div>
   </div>
    <div class="panel panel-default">
@@ -269,6 +277,8 @@ new {
       <h6><b><norm>Download:</norm><b></h6>
         <a class='btn' style='font-size:14px' href="filedownloadlink" download>Direct Download  <i class='fas fa-download'></i></a></script></li>
         <a class='btn' style='font-size:14px' href="https://curseforge.com/">Curseforge <i class='fas fa-download'></i></a></script></li>
+              <a class='btn' style='font-size:14px' href="https://modrinth.com/">Modrinth <i class='fas fa-download'></i></a></script></li>
+
     </div>
   </div>
 </div>
